Bug 476919 - "Show in activities" context menu options are not working
Summary: "Show in activities" context menu options are not working
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Other
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-13 05:31 UTC by Bacteria
Modified: 2023-11-14 10:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bacteria 2023-11-13 05:31:41 UTC
SUMMARY
"Show in activities" context menu options are not working. I can reproduce in both taskmanager and icon-only taskmanager.

STEPS TO REPRODUCE
1. Make sure you have more than one activity
2. Open a window
3. Right click on the window item in task manager and try to use "Show in activities"

OBSERVED RESULT
None of the options in "Show in activities" work

EXPECTED RESULT
They should work

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
"Show in activites" in the title bar works fine.
"Move to desktop" option in the task manager works.
Comment 1 Bacteria 2023-11-14 06:13:13 UTC
Oops. Forgot to add my system info:

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: git master
KDE Frameworks Version: git master
Qt Version: 6.6.0
Comment 2 Marco Martin 2023-11-14 09:58:19 UTC
This seems to be a wayland specific issue
Comment 3 Bug Janitor Service 2023-11-14 10:04:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3532
Comment 4 Marco Martin 2023-11-14 10:23:14 UTC
Git commit 74c0cbcb88d8822ed65752fdf88f02745bcbafc8 by Marco Martin.
Committed on 14/11/2023 at 11:23.
Pushed by mart into branch 'master'.

Fix send to activity context menu in wayland

send to activity in wayland never worked because was comparing the list of requested
activities with itself, always being a no-op

M  +1    -1    libtaskmanager/waylandtasksmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/74c0cbcb88d8822ed65752fdf88f02745bcbafc8