Fix send to activity context menu in wayland

send to activity in wayland never worked because was comparing the list of requested
activities with itself, always being a no-op

BUG:476919